fix(skeleton15): floating music btn, legibility, countdown style, section dividers, gallery photos

--- a/src/features/preview/TemplateWrapper.css
+++ b/src/features/preview/TemplateWrapper.css
@@ -75,7 +75,7 @@
 
 /* --- BOTÓN FLOTANTE --- */
 .music-toggle-btn {
-    position: absolute;
+    position: fixed;
     bottom: 25px;
     right: 25px;
     width: 55px;
